fix course get bug
